--- a/index.html
+++ b/index.html
@@ -3,12 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Password Generator</title>
+    <!-- Font Awesome CDN Link -->
+    <script src="https://kit.fontawesome.com/f663e85456.js" crossorigin="anonymous"></script>
+    <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="style.css">
-    <script src="main.js" type="text/javascript"></script>
-
+    <title>Password Generator</title>
 </head>
-<body>
 
+<body>
+    <div class="container">
+        <h2>Password Generator</h2>
+        <div class="resultContainer">
+            <span id="result"></span>
+            <button class="btn" id="clipboard">
+                <i class="far fa-clipboard"></i>
+            </button>
+        </div>
+        <div class="settings">
+            <div class="setting">
+                <label for="length">Password Length</label>
+                <input type="number" id="length" min="8" max="128" value="128"/>
+            </div>
+            <div class="setting">
+                <label for="uppercase">Include Uppercase Letters</label>
+                <input type="checkbox" id="uppercase" checked />
+            </div>
+            <div class="setting">
+                <label for="lowercase">Include Lowercase Letters</label>
+                <input type="checkbox" id="lowercase" checked />
+            </div>
+            <div class="setting">
+                <label for="numbers">Include Numbers</label>
+                <input type="checkbox" id="numbers" checked />
+            </div>
+            <div class="setting">
+                <label for="symbols">Include Symbols</label>
+                <input type="checkbox" id="symbols" checked />
+            </div>
+        </div>
+            <button class="btn btn-large" id="generate">
+                Generate Password
+            </button>
+        </div>
+
+    <script src="main.js" type="text/javascript"></script>
 </body>
 </html>
